--- a/css/newStyle.css
+++ b/css/newStyle.css
@@ -3,7 +3,7 @@ body {
 }
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   /*grid-gap: 10px;*/
   /*grid-auto-rows: minmax(100px, auto);*/
 }
@@ -84,7 +84,7 @@ body {
   font-family: helvetica;
 }
 .one {
-  grid-column: 1;
+  grid-column: 2;
   grid-row: 1;
   text-align: center;
 }
@@ -115,7 +115,7 @@ body {
 
 
 .two {
-  grid-column: 2;
+  grid-column: 3;
   grid-row: 1;
 }
 .two h1 {
@@ -132,44 +132,48 @@ body {
 
 
 .three {
-  grid-column: 1 / 3;
+  grid-column: 2 / 4;
   grid-row: 2;
 }
 .four {
-  grid-column: 1;
+  grid-column: 2 / 4;
   grid-row: 3;
 }
 
 .five {
-  grid-column: 2;
-  grid-row: 3;
+  grid-column: 2 / 4;
+  grid-row: 4;
 }
 .six {
-  grid-column: 1;
-  grid-row: 4;
+  grid-column: 2 / 4;
+  grid-row: 5;
 }
 .seven {
-  grid-column: 2;
-  grid-row: 4;
+  grid-column: 2 / 4;
+  grid-row: 6;
 }
 .eight {
-  grid-column: 1;
-  grid-row: 5;
+  grid-column: 2 / 4;
+  grid-row: 7;
 }
 
 .nine {
-  grid-column: 2;
-  grid-row: 5;
+  grid-column: 2 / 4;
+  grid-row: 8;
 }
 .ten {
-  grid-column: 1;
-  grid-row: 6;
+  grid-column: 2 /4;
+  grid-row: 9;
 }
 .eleven {
-  grid-column: 2;
-  grid-row: 6;
+  grid-column: 2 / 4;
+  grid-row: 10;
 }
 .twelve {
-  grid-column: 1;
-  grid-row: 7;
+  grid-column: 2 / 4;
+  grid-row: 11;
+}
+.thirteen {
+  grid-column: 2 / 4;
+  grid-row: 12;
 }
