--- a/css/mobile.css
+++ b/css/mobile.css
@@ -32,17 +32,17 @@ a {
   background-color: #002C2A;
 }
 
-.container:hover .overlay {
+.container:focus .overlay {
   opacity: 0.8;
   cursor: pointer;
 }
-.container:hover .bigpic {
+.container:focus .bigpic {
   width: 105%;
 }
 
 .text {
   color: white;
-  font-size: 0.8em;
+  font-size: 22px;
   position: absolute;
   margin: 0 10%;
   text-align: justify;
@@ -55,7 +55,7 @@ a {
 .h1text {
   color: white;
   font-weight: 400;
-  font-size: 1em;
+  font-size: 30px;
   text-align: center;
 }
 
@@ -88,7 +88,7 @@ body {
 .one a {
   color: rgb(70, 93, 109);
 }
-.one a:hover {
+.one a:focus {
   color: rgb(254, 102, 16);
 }
 
@@ -122,7 +122,7 @@ body {
   color: grey;
 }
 
-.two h2:hover {
+.two h2:focus {
   color: black;
   font-weight: 400;
 }
